--- a/Vagrantfiles/centos-4g/Vagrantfile
+++ b/Vagrantfiles/centos-4g/Vagrantfile
@@ -13,6 +13,7 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "centos/7"
+  config.vbguest.installer_options = { allow_kernel_upgrade: true }
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
